src/styles/Note.module.css
.card {
    display: flex;
    flex-direction: column;
    border: 1px solid;
    padding: 25px;
    min-width: 250px;
    max-width: 380px;
    width: 100%;
    min-height: 250px;
    max-height: 500px;

    transition: 0.15s ease-in-out;
    @apply shadow-lg
}

.card:hover {
    cursor: pointer;
    outline: 1px solid;
}
.title_date_space{
    display: flex;
    justify-content: space-between;
}
.cardTitle {
    margin-bottom: 15px;
    @apply
    card-title
}

.text {
    flex-grow: 1;
    word-break: break-word;
}

.cardAction {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 15px;
    position: relative;
    @apply
    card-actions
    justify-between
}

